show descriptions in a pre field for better formatting [ex: hoe gem]

--- a/views/gem.haml
+++ b/views/gem.haml
@@ -4,7 +4,8 @@
     %span.version=@gem.version
   
   .description
-    %p=@gem.description
+    %pre
+      %p=@gem.description
   .meta
     %p.authors
       By 
