--- a/views/layout.haml
+++ b/views/layout.haml
@@ -28,8 +28,8 @@
             =link_to_gem(@stats[:oldest_gem])
             =ts(@stats[:oldest_gem].date)
             Visit 
-            =link_to('core api', 'http://roger.doachristianturndaily.info/ruby_doc/doc_large_trunk_core/')
-            for the 1.9.2 core rdoc.
+            =link_to('core api', 'http://ruby-doc.faithpromotingstories.org')
+            for core docs.
         
       #main.contained
         =yield
