textilize descriptions so that it preserves formatting but allows for long single line descriptions

--- a/views/gem.haml
+++ b/views/gem.haml
@@ -4,8 +4,8 @@
     %span.version=@gem.version
   
   .description
-    %pre
-      %p=@gem.description
+    %textile
+      =@gem.description
   .meta
     %p.authors
       By 
