--- a/views/gem.haml
+++ b/views/gem.haml
@@ -16,7 +16,7 @@
     -if @gem.has_rdoc?
       %p.url 
         Docs: 
-        =link_to("View Local RDoc", "/gems/doc/#{@gem.name}/#{@gem.version}")
+        =link_to("View RDoc", "/gems/doc/#{@gem.name}/#{@gem.version}")
     -unless @gem.rubyforge_project.blank?
       %p.url
         Rubyforge:
