add link to other links

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -30,9 +30,11 @@
           %p
             Visit 
             =link_to('here', 'http://coredocs.faithpromotingstories.org')
-            for core docs and
+            for core docs,
             =link_to('here', 'http://wiki.github.com/rogerdpack/all_gems_rdocs/suggestions')
-            for suggestions.
+            for suggestions, and
+            =link_to('here', 'http://wiki.github.com/rogerdpack/all_gems_rdocs/useful-links')
+            for similar sites.
         
       #main.contained
         =yield
