add in youngest gem too

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -27,6 +27,9 @@
             Oldest gem is
             =link_to_gem(@stats[:oldest_gem])
             =ts(@stats[:oldest_gem].date) + '.'
+            Youngest gem is
+            =link_to_gem(@stats[:youngest_gem])
+            =ts(@stats[:youngest_gem].date) + '.'
             See also 
             =link_to('core docs', 'http://coredocs.faithpromotingstories.org') + ','
             =link_to('leave suggestions', 'http://wiki.github.com/rogerdpack/all_gems_rdocs/suggestions') + ','
