use cleaner syntax for the description--thanks Quirkey

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -28,7 +28,7 @@
             =link_to_gem(@stats[:youngest_gem])
             =ts(@stats[:youngest_gem].date) + '.'
             See also 
-            =link_to('links to similar sites', 'http://wiki.github.com/rogerdpack/all_gems_rdocs/useful-links') + '.'
+            =link_to('more docs', 'http://rubydoc.ruby-forum.com/') + '.'
         
       #main.contained
         =yield
