--- a/views/gem.haml
+++ b/views/gem.haml
@@ -2,10 +2,8 @@
   %h2
     =@gem.name
     %span.version=@gem.version
-  
-  .description
-    %textile
-      =@gem.description
+  - if @gem.description
+    =RDoc::Markup::ToHtml.new.convert(@gem.description).gsub("h2>", "h4>")
   .meta
     %p.authors
       By 
